--- a/package.json
+++ b/package.json
@@ -103,6 +103,8 @@
         "@react-native-community/masked-view": "0.1.5",
         "@react-navigation/native": "^5.0.6",
         "@react-navigation/stack": "^5.0.6",
+        "expo-google-app-auth": "^8.0.1",
+        "expo-google-sign-in": "~8.0.0",
         "firebase": "^7.9.1",
         "moment": "^2.19.0",
         "prop-types": "15.7.2",
@@ -117,8 +119,7 @@
         "react-native-typing-animation": "^0.1.7",
         "react-navigation": "^4.1.1",
         "react-navigation-stack": "^2.1.1",
-        "uuid": "3.3.3",
-        "expo-google-sign-in": "~8.0.0"
+        "uuid": "3.3.3"
     },
     "peerDependencies": {
         "moment": "*",
