--- a/package.json
+++ b/package.json
@@ -118,6 +118,7 @@
         "react-native-screens": "2.0.0-alpha.12",
         "react-native-typing-animation": "^0.1.7",
         "react-navigation": "^4.1.1",
+        "react-navigation-drawer": "^2.4.1",
         "react-navigation-stack": "^2.1.1",
         "uuid": "3.3.3"
     },
