--- a/package.json
+++ b/package.json
@@ -103,6 +103,8 @@
         "@react-native-community/masked-view": "0.1.5",
         "@react-navigation/native": "^5.0.6",
         "@react-navigation/stack": "^5.0.6",
+        "expo-av": "^8.0.0",
+        "expo-file-system": "^8.0.0",
         "expo-google-app-auth": "^8.0.1",
         "expo-google-sign-in": "~8.0.0",
         "firebase": "^7.9.1",
