--- a/package.json
+++ b/package.json
@@ -120,6 +120,7 @@
         "react-native-reanimated": "~1.4.0",
         "react-native-safe-area-context": "0.6.0",
         "react-native-screens": "2.0.0-alpha.12",
+        "react-native-tts": "^3.1.1",
         "react-native-typing-animation": "^0.1.7",
         "react-navigation": "^4.1.1",
         "react-navigation-drawer": "^2.4.1",
