--- a/package.json
+++ b/package.json
@@ -111,6 +111,7 @@
         "firebase": "^7.9.1",
         "moment": "^2.19.0",
         "prop-types": "15.7.2",
+        "react-native-bootstrap-styles": "0.0.9",
         "react-native-communications": "2.2.1",
         "react-native-gesture-handler": "~1.5.0",
         "react-native-iphone-x-helper": "^1.2.0",
